2007-05-31  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Improve resolve, works for people requiring
		.net 1.0 assemblies when they only have 1.1.

2007-05-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultAssemblyResolver.cs:
		Add a RegisterAssembly method to register an
		assembly to the cache without having to resolve it.

	* Mono.Cecil/DefaultReferenceImporter.cs:
		Make methods virtual.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/IReferenceImporter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/ImportContext.cs
	  Mono.Cecil/NullReferenceImporter.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ReflectionController.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/GenericContext.cs
	  Mono.Cecil/DefaultReferenceImporter.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Provide a IReferenceImporter to customize how
		types are injected from an assembly to another.

2007-05-28  Jb Evain  <jbevain@novell.com>

	* Borrow annotations concept from boo ast node.
	  Should be useful for the linker.

2007-05-23  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Emit MemberReferences rows on demand.

2007-05-16  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil.Binary/ImageReader.cs:
		Fix reading of the debug header for
		headers half way emitted by .net SRE.

	* Mono.Cecil/BaseAssemblyResolver:
		try to resolve unversionned assemblies.

2007-05-09  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil.Binary/Image.cs:
		Throw when rva cannot be resolved.

	* Mono.Cecil.csproj
	  Mono.Cecil.Binary/ExportTable.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ReflectionWriter.cs: